--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,42 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Orbitron:wght@900&family=Piedra&family=Special+Elite&display=swap");
 
+.home-wrapper {
+  min-height: 100vh;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+}
+
 header {
   margin: -20px;
   text-align: center;
 }
 
 header h1 {
+  margin-top: -50px;
   font-size: 5rem;
   font-weight: bold;
   font-family: "Orbitron", sans-serif;
-  /* background: #005C97; */
-  /* fallback for old browsers */
-  /* background: -webkit-linear-gradient(to right, #363795, #005C97); */
-  /* Chrome 10-25, Safari 5.1-6 */
-  /* background: linear-gradient(to right, #363795, #005C97); */
   background-size: 500% 500%;
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* color: rgb(15, 37, 109); */
-  /* text-shadow: -2px -1px 0 rgb(255, 0, 0), 2px -1px 0 rgb(255, 196, 0),
-    -2px 1px 0 rgb(0, 0, 0), 2px 1px 0 #000; */
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   animation: moveBg 10s linear infinite;
   -webkit-animation: moveBg 10s cir infinite;
-  /* background-image: linear-gradient(289deg, rgba(131, 131, 131, 0.07) 0%, rgba(131, 131, 131, 0.07) 17%, rgba(142, 142, 142, 0.07) 17%, rgba(142, 142, 142, 0.07) 30%, rgba(32, 32, 32, 0.07) 30%, rgba(32, 32, 32, 0.07) 63%, rgba(179, 179, 179, 0.07) 63%, rgba(179, 179, 179, 0.07) 76%, rgba(134, 134, 134, 0.07) 76%, rgba(134, 134, 134, 0.07) 100%),
-    linear-gradient(199deg, rgba(86, 86, 86, 0.05) 0%, rgba(86, 86, 86, 0.05) 77%, rgba(27, 27, 27, 0.05) 77%, rgba(27, 27, 27, 0.05) 78%, rgba(200, 200, 200, 0.05) 78%, rgba(200, 200, 200, 0.05) 98%, rgba(91, 91, 91, 0.05) 98%, rgba(91, 91, 91, 0.05) 100%),
-    linear-gradient(244deg, rgba(144, 144, 144, 0.03) 0%, rgba(144, 144, 144, 0.03) 10%, rgba(186, 186, 186, 0.03) 10%, rgba(186, 186, 186, 0.03) 11%, rgba(26, 26, 26, 0.03) 11%, rgba(26, 26, 26, 0.03) 31%, rgba(59, 59, 59, 0.03) 31%, rgba(59, 59, 59, 0.03) 66%, rgba(137, 137, 137, 0.03) 66%, rgba(137, 137, 137, 0.03) 78%, rgba(37, 37, 37, 0.03) 78%, rgba(37, 37, 37, 0.03) 97%, rgba(112, 112, 112, 0.03) 97%, rgba(112, 112, 112, 0.03) 100%),
-    linear-gradient(199deg, rgba(111, 111, 111, 0.05) 0%, rgba(111, 111, 111, 0.05) 22%, rgba(135, 135, 135, 0.05) 22%, rgba(135, 135, 135, 0.05) 54%, rgba(209, 209, 209, 0.05) 54%, rgba(209, 209, 209, 0.05) 59%, rgba(56, 56, 56, 0.05) 59%, rgba(56, 56, 56, 0.05) 79%, rgba(85, 85, 85, 0.05) 79%, rgba(85, 85, 85, 0.05) 87%, rgba(8, 8, 8, 0.05) 87%, rgba(8, 8, 8, 0.05) 100%),
-    linear-gradient(154deg, rgba(207, 207, 207, 0.08) 0%, rgba(207, 207, 207, 0.08) 17%, rgba(85, 85, 85, 0.08) 17%, rgba(85, 85, 85, 0.08) 38%, rgba(45, 45, 45, 0.08) 38%, rgba(45, 45, 45, 0.08) 59%, rgba(236, 236, 236, 0.08) 59%, rgba(236, 236, 236, 0.08) 68%, rgba(160, 160, 160, 0.08) 68%, rgba(160, 160, 160, 0.08) 86%, rgba(149, 149, 149, 0.08) 86%, rgba(149, 149, 149, 0.08) 100%),
-    linear-gradient(199deg, rgba(30, 30, 30, 0.07) 0%, rgba(30, 30, 30, 0.07) 21%, rgba(195, 195, 195, 0.07) 21%, rgba(195, 195, 195, 0.07) 36%, rgba(251, 251, 251, 0.07) 36%, rgba(251, 251, 251, 0.07) 48%, rgba(117, 117, 117, 0.07) 48%, rgba(117, 117, 117, 0.07) 75%, rgba(98, 98, 98, 0.07) 75%, rgba(98, 98, 98, 0.07) 87%, rgba(153, 153, 153, 0.07) 87%, rgba(153, 153, 153, 0.07) 95%, rgba(215, 215, 215, 0.07) 95%, rgba(215, 215, 215, 0.07) 100%),
-    linear-gradient(199deg, rgba(233, 233, 233, 0.07) 0%, rgba(233, 233, 233, 0.07) 4%, rgba(224, 224, 224, 0.07) 4%, rgba(224, 224, 224, 0.07) 21%, rgba(194, 194, 194, 0.07) 21%, rgba(194, 194, 194, 0.07) 49%, rgba(83, 83, 83, 0.07) 49%, rgba(83, 83, 83, 0.07) 58%, rgba(71, 71, 71, 0.07) 58%, rgba(71, 71, 71, 0.07) 75%, rgba(139, 139, 139, 0.07) 75%, rgba(139, 139, 139, 0.07) 92%, rgba(236, 236, 236, 0.07) 92%, rgba(236, 236, 236, 0.07) 94%, rgba(226, 219, 219, 0.06) 94%, rgba(226, 219, 219, 0.06) 100%),
-    linear-gradient(244deg, rgb(238, 248, 1), rgb(11, 255, 20)); */
   background-image: linear-gradient(295deg, rgba(231, 231, 231, 0.08) 0%, rgba(231, 231, 231, 0.08) 14%, rgba(224, 224, 224, 0.08) 14%, rgba(224, 224, 224, 0.08) 51%, rgba(140, 140, 140, 0.08) 51%, rgba(140, 140, 140, 0.08) 100%),
     linear-gradient(295deg, rgba(244, 244, 244, 0.09) 0%, rgba(244, 244, 244, 0.09) 21%, rgba(158, 158, 158, 0.09) 21%, rgba(158, 158, 158, 0.09) 31%, rgba(162, 162, 162, 0.09) 31%, rgba(162, 162, 162, 0.09) 89%, rgba(115, 115, 115, 0.09) 89%, rgba(115, 115, 115, 0.09) 100%),
     linear-gradient(295deg, rgb(59, 53, 68), rgba(22, 0, 75, 0.973));
 }
-
 
 @keyframes moveBg {
   0% {
@@ -82,7 +73,6 @@ header h3 {
   max-width: 450px;
   letter-spacing: 1px;
   box-shadow: 10px -20px 30px 20px rgba(7, 7, 7, 0.8);
-  /* box-shadow: -17px 10px 12px -5px rgba(0, 0, 0, 0.56); */
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -110,19 +100,22 @@ header h3 {
 
 .battleCard h5 {
   margin-top: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   padding-top: 10px;
   padding-bottom: 20px;
-  font-size: 30px;
+  font-size: 28px;
   font-family: "Piedra", cursive;
-  /* letter-spacing: 1px; */
   color: rgb(217, 255, 0);
   border-bottom: 2px ridge rgb(0, 255, 149);
   border-radius: 4px;
   box-shadow: -17px 10px 12px -5px rgba(0, 0, 0, 0.56);
-  /* text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0),
-    -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 #000; */
-  /* text-shadow: -1px -1px 0 rgb(231, 247, 7), 1px -1px 0 rgb(243, 4, 4), -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 #000; */
+  transition: all 0.5s;
+
+}
+
+.battleCard h5:hover {
+  font-size: 32px;
+  color: orange;
 }
 
 .all-btn {
@@ -133,8 +126,6 @@ header h3 {
   border: 1px solid;
   letter-spacing: 0.8px;
   transition: all 0.5s;
-
-  /* box-shadow: 0 0 5px 0 #d4d8db inset, 0 0 5px 2px #d5e7f3; */
 }
 
 .all-btn:hover {
@@ -150,21 +141,6 @@ header h3 {
   transition: 0.5s;
 }
 
-.all-btn span:after {
-  content: '>>';
-  font-size: 1.25rem;
-  position: absolute;
-  opacity: 0;
-  top: -5px;
-  right: -20px;
-  transition: 0.5s;
-
-}
-
-.all-btn:hover span {
-  padding-right: 25px;
-}
-
 .all-btn:hover span:after {
   opacity: 1;
   right: 0;
@@ -178,12 +154,23 @@ header h3 {
   color: yellow
 }
 
-.btn3 {
-  color: rgb(0, 255, 0)
-}
-
 .game-rules {
   color: white;
+}
+
+.game-rules:hover span {
+  padding-right: 25px;
+  color: rgb(255, 72, 0);
+}
+
+.game-rules span:after {
+  content: '>>';
+  font-size: 1.25rem;
+  position: absolute;
+  opacity: 0;
+  top: -5px;
+  right: -20px;
+  transition: 0.5s;
 }
 
 @media (max-width: 768px) {
@@ -191,6 +178,8 @@ header h3 {
     font-size: 44px;
     margin: 10px;
     padding-top: 50px;
+    margin-top: 33%;
+
   }
 
   .image {
@@ -203,7 +192,7 @@ header h3 {
   }
 
   .battleCard {
-    height: 360px;
+    height: 300px;
     width: 260px;
     box-shadow: 22px 20px 30px -2px rgba(0, 0, 0, 0.56);
     opacity: .97;
